--- a/lotus/templates/lotus/category/list.html
+++ b/lotus/templates/lotus/category/list.html
@@ -1,11 +1,11 @@
 {% extends "lotus/base.html" %}
 {% load i18n %}
 
-{% block head_title %}{% blocktrans %}Category list{% endblocktrans %}{% endblock head_title %}
+{% block head_title %}{% blocktrans %}Categories{% endblocktrans %}{% endblock head_title %}
 
 {% block lotus_content %}{% spaceless %}
 <div class="category-list-container">
-    <h1 class="title border-bottom border-5 py-1 mb-3">{% blocktrans %}Category list{% endblocktrans %}</h1>
+    <h1 class="title border-bottom border-5 py-1 mb-3">{% blocktrans %}Categories{% endblocktrans %}</h1>
 
     <div class="list container">
         <div class="row row-cols-1 row-cols-md-4 g-4">
