--- a/scss/settings/_bootstrap.scss
+++ b/scss/settings/_bootstrap.scss
@@ -1,2 +1,7 @@
 @import 'bootstrap/scss/functions';
 @import 'bootstrap/scss/variables';
+
+// Define the right relative path to the icon font. We just add a leading dot on the
+// original path copied from "bootstrap-icons" Sass source
+$bootstrap-icons-font-src: url("../fonts/bootstrap-icons.woff2?a97b3594ad416896e15824f6787370e0") format("woff2"),
+url("../fonts/bootstrap-icons.woff?a97b3594ad416896e15824f6787370e0") format("woff") !default;
