--- a/lotus/templates/lotus/article/item.html
+++ b/lotus/templates/lotus/article/item.html
@@ -1,26 +1,27 @@
 {% load i18n lotus %}{% spaceless %}
-<div class="article card h-100 mb-3 {% article_states article_object prefix="article--" %}">
+<a href="{{ article_object.get_absolute_url }}" class="article card text-decoration-none text-reset h-100 mb-3 {% article_states article_object prefix="article--" %}">
     {% if article_object.cover %}
         <img src="{{ article_object.cover.url }}" class="cover card-img-top" alt="">
     {% endif %}
 
     <div class="card-body">
-        <h2 class="title">
-            <a href="{{ article_object.get_absolute_url }}">{{ article_object.title }}</a>
-        </h2>
+        <p class="card-text mb-0"><small class="publish text-muted">{{ article_object.publish_datetime }}</small></p>
+        <h2 class="title h5">{{ article_object.title }}</h2>
         <div class="introduction card-text">{{ article_object.introduction|safe }}</div>
         <div class="card-text mb-2">
             {% for category in article_object.get_categories %}
             <span class="badge rounded-pill bg-light text-dark">{{ category.title }}</span>
             {% endfor %}
         </div>
-        <p class="card-text"><small class="publish text-muted">{{ article_object.publish_datetime }}</small></p>
     </div>
 
     {% if user.is_authenticated and user.is_staff %}
         {% article_state_list article as article_states %}
-        {% if "pinned" in article_states or "draft" in article_states or "private" in article_states %}
+        {% if "featured" in article_states or "pinned" in article_states or "draft" in article_states or "private" in article_states or "passed" in article_states or "not-yet" in article_states %}
         <p class="states">
+            {% if "featured" in article_states %}
+                <i class="bi bi-star" title="{% trans "Featured" %}" role="img" aria-label="{% trans "Featured" %}"></i>
+            {% endif %}
             {% if "pinned" in article_states %}
                 <i class="bi bi-pin-angle" title="{% trans "Pinned" %}" role="img" aria-label="{% trans "Pinned" %}"></i>
             {% endif %}
@@ -33,8 +34,11 @@
             {% if "not-yet" in article_states %}
                 <i class="bi bi-calendar-event" title="{% trans "Scheduled publication" %}" role="img" aria-label="{% trans "Scheduled publication" %}"></i>
             {% endif %}
+            {% if "passed" in article_states %}
+                <i class="bi bi-calendar2-x" title="{% trans "Ended publication" %}" role="img" aria-label="{% trans "Ended publication" %}"></i>
+            {% endif %}
         </p>
         {% endif %}
     {% endif %}
-</div>
+</a>
 {% endspaceless %}
