--- a/lotus/templates/lotus/category/item.html
+++ b/lotus/templates/lotus/category/item.html
@@ -4,7 +4,7 @@
         <img src="{{ category_object.cover.url }}" class="cover card-img-top" alt="">
     {% endif %}
     <div class="card-body">
-        <h2 class="title card-title">{{ category_object.title }}</h2>
+        <h2 class="title h5 card-title">{{ category_object.title }}</h2>
         <div class="description card-text">{{ category_object.description }}</div>
     </div>
 </a>
