--- a/lotus/templates/lotus/category/detail.html
+++ b/lotus/templates/lotus/category/detail.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="articles container">
-        <h2>Articles</h2>
+        <h2>{% trans "Articles" %}</h2>
 
         <div class="row row-cols-3 g-4">
             {% for article in object_list %}
