--- a/lotus/templates/lotus/article/list.html
+++ b/lotus/templates/lotus/article/list.html
@@ -1,11 +1,11 @@
 {% extends "lotus/base.html" %}
 {% load i18n %}
 
-{% block head_title %}{% blocktrans %}Articles{% endblocktrans %}{% endblock head_title %}
+{% block head_title %}{% trans "Articles" %}{% endblock head_title %}
 
 {% block lotus_content %}{% spaceless %}
 <div class="article-list-container">
-    <h1 class="title border-bottom border-5 py-1 mb-3">{% blocktrans %}Articles{% endblocktrans %}</h1>
+    <h1 class="title border-bottom border-5 py-1 mb-3">{% trans "Articles" %}</h1>
 
     <div class="list container">
         <div class="row row-cols-4 g-4">
