--- a/lotus/templates/lotus/author/detail.html
+++ b/lotus/templates/lotus/author/detail.html
@@ -7,8 +7,9 @@
 <div class="author-detail">
     <h1 class="title">{{ author_object }}</h1>
 
-    <p>Articles</p>
     <div class="articles container">
+        <h2>{% trans "Articles" %}</h2>
+
         <div class="row row-cols-3 g-4">
             {% for article in object_list %}
             <div class="col">
