--- a/lotus/templates/lotus/pagination.html
+++ b/lotus/templates/lotus/pagination.html
@@ -1,5 +1,4 @@
-{% spaceless %}
-{% load i18n %}
+{% load i18n %}{% spaceless %}
 {% if paginator and paginator.num_pages > 1 %}
 <nav aria-label="{% trans "Pagination" %}">
     <ul class="pagination justify-content-center mt-3">
