--- a/lotus/templates/lotus/category/detail.html
+++ b/lotus/templates/lotus/category/detail.html
@@ -21,7 +21,7 @@
     <div class="articles container">
         <h2>{% trans "Articles" %}</h2>
 
-        <div class="row row-cols-3 g-4">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             {% for article in object_list %}
             <div class="col">
                 {% include "lotus/article/item.html" with article_object=article %}
