--- a/lotus/templates/lotus/category/list.html
+++ b/lotus/templates/lotus/category/list.html
@@ -8,7 +8,7 @@
     <h1 class="title border-bottom border-5 py-1 mb-3">{% trans "Categories" %}</h1>
 
     <div class="list container">
-        <div class="row row-cols-1 row-cols-md-5 g-4">
+        <div class="row row-cols-1 row-cols-md-3 row-cols-lg-5 g-4">
             {% for category in category_list %}
             <div class="col">
                 {% include "lotus/category/item.html" with category_object=category %}
